tdf#99616 writerfilter: hideMark shouldn't force min size

hideMark in Word does not force the minimum possible row size,
but simply ignores any cell marker styles/sizings. So an empty row
then takes on the "at least" size defined for the row.

Change-Id: Id24a52f2a360a5040c2eed5c17757c0d32d03520
Reviewed-on: https://gerrit.libreoffice.org/32380
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>